Client: Honor QGuiApplication::overrideCursor()

If there's a QGuiApplication::overrideCursor(), QWindow::cursor() can
still return a different cursor. This can result in a wrong cursor when
the pointer enters a window.

Fixes: QTBUG-75919
Change-Id: I015117b4b6d252b421ab14bd8f2a8f582f7cae52
Reviewed-by: Liang Qi <liang.qi@qt.io>
(cherry picked from commit 471b2123400ef6936b5173553205549c7dd1a249)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>